--- a/Styles/banner.css
+++ b/Styles/banner.css
@@ -1,123 +1,67 @@
-.carrossel__titulo {
-    color: var(--laranja);
-    background-color: var(--branco);
+.banner {
+    background: var(--azul-degrade);
+    color: var(--branco);
     text-align: center;
-    text-transform: uppercase;
-    font-size: 18px;
-    font-weight: 700;
-    padding: 1em 0 0.5em 0;
+    padding: 2.5em 2em;
 }
 
-.swiper-slide img {
+.banner__titulo {
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.banner__texto {
+    font-weight: 500;
+    margin: 1em 0;
+}
+
+.banner__pesquisa {
+    background-color: transparent;
+    border: 1px solid var(--branco);
+    color: var(--branco);
+    border-radius: 24px;
+    padding: 1em;
     width: 100%;
 }
 
-.swiper-button-prev,
-.swiper-button-next {
-    display: none;
-}
-
-.swiper-pagination {
-    position: initial;
-    margin: .5em 0;
-}
-
-.card__descrição {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 0.5em;
-}
-
-.card__botões {
-    display: flex;
-    justify-content: space-between;
-}
-
-.botões {
-    display: flex;
-}
-
-.card {
-    background: var(--branco);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 10px;
-    margin: 1em;
-    padding: 1em;
-}
-
-.descrição__titulo {
-    color: var(--laranja);
-    font-weight: 700;
-}
-
-.descrição__titulo-livro {
-    color: var(--azul);
-    font-size: 18px;
-    font-weight: 700;
-    margin: 0.5em 0;
-}
-
-.descrição__texto {
+.banner__pesquisa::placeholder {
+    font-family: var(--fonte-principal);
     font-size: 14px;
-}
-
-.botões__item {
-    margin: 0 0.5em;
-}
-
-.botões__ancora {
-    background-color: var(--laranja);
-    padding: 1em 2.2em;
+    font-weight: 400;
+    text-align: center;
     color: var(--branco);
-    font-weight: 700;
-    text-decoration: none;
+    background: url("../img/Lupa.svg") no-repeat;
+    background-position: 1em;
 }
 
 @media screen and (min-width: 1024px) {
-    .carrossel__titulo {
-        font-size: 26px;
+    .banner__titulo {
+        font-size: 36px;
     }
 
-    .swiper-pagination {
-        margin: 2em 0 3em 0;
-    }
-
-    .swiper {
-        width: 60%;
-    }
-
-    .swiper-button-prev,
-    .swiper-button-next {
-        display: block;
-        top: 60%;
-    }
-}
-
-@media screen and (min-width: 1728px) {
-    .carrossel__container {
-        display: flex;
-        margin: 0 20vw 3em 20vw;
-    }
-
-    .swiper-pagination {
-        margin: 1em 0;
-    }
-
-    .swiper {
+    .banner__pesquisa {
         width: 50%;
     }
 
-    .descrição__titulo {
-        font-size: 32px;
+    .banner__pesquisa::placeholder {
+        background-position: 7em;
+    }
+}
+
+
+
+@media screen and (min-width: 1728px) {
+    .banner__pesquisa {
+        width: 35%;
     }
 
-    .descrição__texto {
-        font-size: 16px;
+    .banner {
+        padding: 6em 0;
     }
 
-    .card {
-        width: 60%;
-        margin-left: 3em;
+    .banner__pesquisa::placeholder {
+        background-position: 12em;
     }
+
 
 }
